ChoiseStationController tableView customized, resources for cell addded UIFont(AppFont) category added

--- a/TestAPIv4/Views/RoutesCustomCell/RoutesCustomCell.xib
+++ b/TestAPIv4/Views/RoutesCustomCell/RoutesCustomCell.xib
@@ -160,7 +160,7 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="wagonType" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irD-Kc-oOD">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wagonType" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irD-Kc-oOD">
                         <rect key="frame" x="95" y="171" width="88" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="RNJ-wH-HHD"/>
