--- a/TestAPIv4/Base.lproj/Main.storyboard
+++ b/TestAPIv4/Base.lproj/Main.storyboard
@@ -199,12 +199,33 @@
                         <viewControllerLayoutGuide type="bottom" id="L42-4P-vvX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="E4y-TS-C5N">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RtP-pn-hAC">
+                                <rect key="frame" x="20" y="20" width="280" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="IQW-xx-Wky"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Сегодня"/>
+                                    <segment title="Завтра"/>
+                                    <segment title="Послезавтра"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RtP-pn-hAC" firstAttribute="top" secondItem="Oei-tX-57M" secondAttribute="bottom" constant="20" id="Uf3-Wn-FE8"/>
+                            <constraint firstItem="RtP-pn-hAC" firstAttribute="leading" secondItem="E4y-TS-C5N" secondAttribute="leading" constant="20" id="n3E-1s-I4C"/>
+                            <constraint firstAttribute="trailing" secondItem="RtP-pn-hAC" secondAttribute="trailing" constant="20" id="t2A-Z3-TLV"/>
+                        </constraints>
                     </view>
-                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="O0Q-Nc-zGi"/>
+                    <connections>
+                        <outlet property="segmentedControl" destination="RtP-pn-hAC" id="1f5-Jt-vXR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3rO-nA-mFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -251,14 +272,17 @@
             <objects>
                 <tableViewController id="3Zp-J7-G2j" customClass="ChoiseStationController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kdY-tE-Hi8">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="o3P-3Q-YYT">
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search stations" id="o3P-3Q-YYT">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                            <scopeButtonTitles>
+                                <string>Title</string>
+                            </scopeButtonTitles>
                             <connections>
                                 <outlet property="delegate" destination="3Zp-J7-G2j" id="EcG-fP-QEt"/>
                             </connections>
@@ -288,7 +312,7 @@
                             <outlet property="delegate" destination="3Zp-J7-G2j" id="ZRr-MI-fo0"/>
                         </connections>
                     </tableView>
-                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="rpf-7T-JpQ"/>
                     <connections>
                         <outlet property="searchField" destination="o3P-3Q-YYT" id="8P9-QB-Q66"/>
@@ -419,7 +443,7 @@
         <image name="logo" width="249" height="85"/>
         <image name="more" width="35" height="10"/>
         <image name="myTickets" width="30" height="20"/>
-        <image name="pin-gray" width="16" height="20"/>
+        <image name="pin-gray" width="16" height="16"/>
         <image name="tickets" width="24" height="27"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
